### Process this file with automake to produce Makefile.in

include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gnome-video-arcade
DOC_ENTITIES = legal.xml
DOC_INCLUDES =

DOC_FIGURES = \
	figures/gva_building_database.png	\
	figures/gva_column_preferences.png	\
	figures/gva_general_preferences.png	\
	figures/gva_main_window.png		\
	figures/gva_recorded_games.png		\
	figures/gva_search_window.png

DOC_LINGUAS =
