@YELP_HELP_RULES@

HELP_ID = gnome-video-arcade

HELP_FILES = \
	index.docbook \
	legal.xml

HELP_MEDIA = \
	figures/gva_building_database.png	\
	figures/gva_column_preferences.png	\
	figures/gva_general_preferences.png	\
	figures/gva_main_window.png		\
	figures/gva_recorded_games.png		\
	figures/gva_search_window.png

HELP_LINGUAS = cs da de es it sl sv

-include $(top_srcdir)/git.mk
